files formatted and extra code removed

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,118 +1,77 @@
-<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
-
-
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
----- Include the above in your HEAD tag ---------->
-<!-- <div style="text-align: center">
-    <h1>{{message}}</h1>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-             <form name="userform" #myForm="ngForm" [formGroup]="registerform">
-                     <fieldset>
-                       <legend class="text-center"><b>Add User</b> <span class="req"><small>
-                                                required *</small></span></legend>
-                 -->
-<!-- 
-                      <div class="form-group">
-                        <label for="ticketNo"><span class="req">* </span> Ticket Number : </label>
-                        <input class="form-control" type="text" [(ngModel)]="user.ticketNo" name="ticketNo" id="txt" required
-                                        placeholder="Enter ticket number "/>
-                            <div id="errLast"></div>
-                                </div>
-                    <div class="form-group">
-                        <label for="Name"><span class="req">* </span> Name: <small></small> </label>
-                        <input required type="text" [(ngModel)]="user.name" name="name" id="name"
-                            class="form-control phone"  placeholder="Enter your fullname..." />
-                    </div>
-               
-                    <div class="form-group">
-                        <label for="address"><span class="req">* </span> Address: </label>
-                        <input class="form-control" type="text" [(ngModel)]="user.address" name="address" id="txt" required
-                            placeholder="Enter valid address" />
-                        <div id="errFirst"></div>
-                    </div> -->
-
-                                  
-                    <!-- <div class="form-group">
-                        <label for="contactNo"><span class="req">* </span> Contact Number: </label>
-                        <input class="form-control" required type="text" [(ngModel)]="user.contactNo" formControlName="contactNo"
-                            id="contactNo" maxlength="10" placeholder="Mobile number" />
-                         
-                    </div>
-                    
-                    <div class="form-group">
-                        <input class="btn btn-success" type="submit" name="submit_reg" value="Register" (click)="registerNow()">
-                    </div>
-                </fieldset>
-            </form>            ends register form -->
-            <!-- second for to fiter user-->
-        <!-- </div>ends col-6 -->
-
-    <!-- </div>
-</div>   -->
-
 <div class="container mt-4">
     <h1 class="text-center">User Form</h1>
     <form [formGroup]="registerform">
         <div class="mb-3">
             <label for="ticketNo" class="form-label">Ticket Number</label>
-            <input type="text" class="form-control" id="ticketNo"  placeholder="Ticket Number" formControlName="ticketNo" [ngClass]="{error:getControl('ticketNo')?.errors && getControl('ticketNo')?.touched}">
+            <input type="text" class="form-control" id="ticketNo" placeholder="Ticket Number" formControlName="ticketNo"
+                [ngClass]="{error:getControl('ticketNo')?.errors && getControl('ticketNo')?.touched}">
             <div *ngIf="getControl('ticketNo')?.errors && getControl('ticketNo')?.touched">
-            <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['required']">Ticket number is required</small>
-            <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['maxlength']">Only 10 digits are allowed</small>
-            <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['pattern']">Only numbers allowed</small>
+                <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['required']">Ticket number is
+                    required</small>
+                <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['maxlength']">Only 10 digits are
+                    allowed</small>
+                <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['pattern']">Only numbers
+                    allowed</small>
             </div>
         </div>
         <div class="mb-3">
             <label for="fname" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="fname"   placeholder="First Name" formControlName="fname" [ngClass]="{error:getControl('fname')?.errors && getControl('fname')?.touched}">
+            <input type="text" class="form-control" id="fname" placeholder="First Name" formControlName="fname"
+                [ngClass]="{error:getControl('fname')?.errors && getControl('fname')?.touched}">
             <div *ngIf="getControl('fname')?.errors && getControl('fname')?.touched">
-                <small class="text-danger" *ngIf="getControl('fname')?.errors?.['required']">First Name is required</small>
-                <small class="text-danger" *ngIf="getControl('fname')?.errors?.['maxlength']">Only 32 characters are allowed</small>
-               
-                </div>
+                <small class="text-danger" *ngIf="getControl('fname')?.errors?.['required']">First Name is
+                    required</small>
+                <small class="text-danger" *ngIf="getControl('fname')?.errors?.['maxlength']">Only 32 characters are
+                    allowed</small>
+
+            </div>
         </div>
         <div class="mb-3">
             <label for="lname" class="form-label">last Name</label>
-            <input type="text" class="form-control" id="lname"  placeholder="last Name" formControlName="lname" [ngClass]="{error:getControl('lname')?.errors && getControl('lname')?.touched}">
+            <input type="text" class="form-control" id="lname" placeholder="last Name" formControlName="lname"
+                [ngClass]="{error:getControl('lname')?.errors && getControl('lname')?.touched}">
             <div *ngIf="getControl('lname')?.errors && getControl('lname')?.touched">
-                <small class="text-danger" *ngIf="getControl('lname')?.errors?.['required']">Last name is required</small>
-                <small class="text-danger" *ngIf="getControl('lname')?.errors?.['maxlength']">Only 32 characters are allowed</small>
-               
-                </div>
+                <small class="text-danger" *ngIf="getControl('lname')?.errors?.['required']">Last name is
+                    required</small>
+                <small class="text-danger" *ngIf="getControl('lname')?.errors?.['maxlength']">Only 32 characters are
+                    allowed</small>
+
+            </div>
         </div>
         <div class="mb-3">
             <label for="address" class="form-label">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="Address" formControlName="address" [ngClass]="{error:getControl('address')?.errors && getControl('address')?.touched}">
+            <input type="text" class="form-control" id="address" placeholder="Address" formControlName="address"
+                [ngClass]="{error:getControl('address')?.errors && getControl('address')?.touched}">
             <div *ngIf="getControl('address')?.errors && getControl('address')?.touched">
-                <small class="text-danger" *ngIf="getControl('address')?.errors?.['required']">Address is required</small>
-                <small class="text-danger" *ngIf="getControl('address')?.errors?.['maxlength']">Only 50 characters are allowed</small>
-               
-                </div>
+                <small class="text-danger" *ngIf="getControl('address')?.errors?.['required']">Address is
+                    required</small>
+                <small class="text-danger" *ngIf="getControl('address')?.errors?.['maxlength']">Only 50 characters are
+                    allowed</small>
+
+            </div>
         </div>
         <div class="mb-3">
             <label for="contactNo" class="form-label">Contact Number</label>
-            <input type="text" class="form-control" id="contactNo" placeholder="Contact Number" formControlName="contactNo" [ngClass]="{error:getControl('contactNo')?.errors && getControl('contactNo')?.touched}">
+            <input type="text" class="form-control" id="contactNo" placeholder="Contact Number"
+                formControlName="contactNo"
+                [ngClass]="{error:getControl('contactNo')?.errors && getControl('contactNo')?.touched}">
             <div *ngIf="getControl('contactNo')?.errors && getControl('contactNo')?.touched">
-                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['required']">Contact number is required</small>
-                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['maxlength']">Maximum 10 digits are allowed</small>
-                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['minlength']">Minimum 10 digits are allowed</small>
-                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['pattern']">Only numbers allowed</small>
-                </div>
+                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['required']">Contact number is
+                    required</small>
+                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['maxlength']">Maximum 10 digits are
+                    allowed</small>
+                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['minlength']">Minimum 10 digits are
+                    allowed</small>
+                <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['pattern']">Only numbers
+                    allowed</small>
+            </div>
         </div>
 
         <div class="form-group">
-            <input class="btn btn-success" type="submit" name="submit_reg" [disabled]="registerform.status=== 'INVALID'"   value="Register" (click)="registerNow()">
-            <!-- <a mat-raised-button color="primary" type="submit"name="submit_reg" [disabled]="registerform.status==='INVALID'" value="Register" (click)="registerNow()">Register</a> -->
+            <input class="btn btn-success" type="submit" name="submit_reg" [disabled]="registerform.status=== 'INVALID'"
+                value="Register" (click)="registerNow()">
+
         </div>
 
-</form>
+    </form>
 </div>
-
-    
-
