--- a/src/app/view-user/view-user.component.html
+++ b/src/app/view-user/view-user.component.html
@@ -1,212 +1,163 @@
-<!-- <p>view-user works!</p>
-<div class="card" style="width: 1200px">
-    <h3>Listing Invoice</h3>
-    <div class="card-header">
-        <a class="btn btn-success" routerLink="createinvoice">Create New [+]</a>
-    </div>
-    <div class="card-body">
-
-        <table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="table table-bordered">
-            <thead class="bg-dark text-white">
-                <tr>
-                    <td>Invoice No</td>
-                    <td>Customer</td>
-                    <td>Remarks</td>
-                    <td>Total</td>
-                    <td>Tax</td>
-                    <td>NetTotal</td>
-                    <td>Action</td>
-                </tr>
-            </thead>
-            <tbody>
-<tr *ngFor="let item of Invoiceheader">
-    <td>{{item.invoiceNo}}</td>
-    <td>{{item.customerName}}</td>
-    <td>{{item.remarks}}</td>
-    <td>{{item.total | currency}}</td>
-    <td>{{item.tax | currency}}</td>
-    <td>{{item.netTotal | currency}}</td>
-    <td style="width: 30%">
-<a class="btn btn-primary" (click)="Editinvoice(item.invoiceNo)">Edit</a> | 
-<a class="btn btn-danger" (click)="invoiceremove(item.invoiceNo)">Delete</a> |
-<a class="btn btn-success" (click)="PreviewInvoice(item.invoiceNo)">Print</a> |
-<a class="btn btn-success" (click)="DownloadInvoice(item.invoiceNo)">Download</a>
-    </td>
-
-</tr>
-            </tbody>
-
-        </table>
-
-    </div>
-
-</div>
-
-<ng-template #content let-c="close" let-d="dismiss">
-	<div class="modal-header">
-		<h4 class="modal-title" id="modal-basic-title">Preview Invoice : <b>{{invoiceno}}</b></h4>
-		<button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
-	</div>
-	<div class="modal-body">
-		<ngx-extended-pdf-viewer [src]="pdfurl"></ngx-extended-pdf-viewer>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-danger" (click)="d('Cross click')">Close</button>
-	</div>
-</ng-template>
- -->
 <br>
-<div class="card-header" >
-    <h1 class="text-center" >User List</h1>
- <mat-form-field>
+<div class="card-header">
+  <h1 class="text-center">User List</h1>
+  <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
   </mat-form-field>
   <!-- <button mat-button (click)="exporter.exportTable('csv')"></button> -->
- <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort >
-       <!-- Position Column -->
- <ng-container matColumnDef="uid" >
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" hidden> No. </th>
-    <td mat-cell *matCellDef="let element" hidden> {{element.uid}} </td>
-  </ng-container>
-<!-- Name Column -->
-<ng-container matColumnDef="ticketNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Ticket No </th>
-    <td mat-cell *matCellDef="let element"> {{element.ticketNo}} </td>
-  </ng-container>
-<!-- Name Column -->
-<ng-container matColumnDef="fname">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
-  </ng-container>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- Position Column -->
+      <ng-container matColumnDef="uid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" hidden> No. </th>
+        <td mat-cell *matCellDef="let element" hidden> {{element.uid}} </td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="ticketNo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ticket No </th>
+        <td mat-cell *matCellDef="let element"> {{element.ticketNo}} </td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="fname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.fname}} </td>
+      </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="lname">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.lname}} </td>
-  </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="lname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.lname}} </td>
+      </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-  </ng-container> 
+      <!-- Weight Column -->
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+      </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="contactNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Contact No </th>
-    <td mat-cell *matCellDef="let element"> {{element.contactNo}} </td>
-  </ng-container>
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="contactNo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Contact No </th>
+        <td mat-cell *matCellDef="let element"> {{element.contactNo}} </td>
+      </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef > Actions </th>
-    <td mat-cell *matCellDef="let element">
-  <a mat-raised-button color="primary" (click)="ViewUserData(element)" >view</a>|
-  <a mat-raised-button color="accent" (click)="EditUser(content,element)">Edit</a>|
-  <a mat-raised-button color="warn" (click)="removeUser(content1,element)">Delete</a>
-</td>
-</ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <a mat-raised-button color="primary" (click)="ViewUserData(element)">view</a>|
+          <a mat-raised-button color="accent" (click)="EditUser(content,element)">Edit</a>|
+          <a mat-raised-button color="warn" (click)="removeUser(content1,element)">Delete</a>
+        </td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
+  </div>
+</div>
 
-<mat-paginator [pageSizeOptions]="[10, 20, 30]"
-               showFirstLastButtons
-               aria-label="Select page of periodic elements">
-</mat-paginator>
+<ng-template #content1 let-modal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Remove User</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <p>Do You want to remove {{registerform.value.fname}}?</p>
 
-        
- </div>
- </div>
-
-  <ng-template #content1 let-modal let-c="close" let-d="dismiss"  > 
-    <div class="modal-header">
-      <h4 class="modal-title">Remove User</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-      <p>Do You want to remove {{registerform.value.fname}}?</p>
-  
-    </div>
-    <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="removeUserData(registerform.value.uid);successuserremove();c('Close click');">Yes</button>
-      <button type="button" class="btn btn-secondary" (click)="c('Close click')">No</button>
-    </div>
-   </ng-template> 
-  
- <ng-template #content let-c="close" let-d="dismiss">
-	<div class="modal-header">
-		<h4 class="modal-title" id="modal-basic-title"><b>User details</b></h4>
-		<button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
-	</div>
-	<div class="modal-body" >
-		<!-- <ngx-extended-pdf-viewer [src]="pdfurl"></ngx-extended-pdf-viewer> -->
-        <body>
-            <div class="container mt-4">
-              
-                <form [formGroup]="registerform">
-                    <div class="mb-3">
-                        <input type="text" formControlName="uid" hidden>
-                        <label for="ticketNo" class="form-label">Ticket Number</label>
-                        <input type="text" class="form-control"  id="ticketNo"  placeholder="Ticket Number" formControlName="ticketNo" [ngClass]="{error:getControl('ticketNo')?.errors && getControl('ticketNo')?.touched}">
-                        <div *ngIf="getControl('ticketNo')?.errors && getControl('ticketNo')?.touched">
-                        <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['required']">Ticket number is required</small>
-                        <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['maxlength']">Only 10 digits are allowed</small>
-                        <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['pattern']">Only numbers allowed</small>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="fname" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="fname"   placeholder="First Name" formControlName="fname" [ngClass]="{error:getControl('fname')?.errors && getControl('fname')?.touched}">
-                        <div *ngIf="getControl('fname')?.errors && getControl('fname')?.touched">
-                            <small class="text-danger" *ngIf="getControl('fname')?.errors?.['required']">Ticket number is required</small>
-                            <small class="text-danger" *ngIf="getControl('fname')?.errors?.['maxlength']">Only 32 characters are allowed</small>
-                           
-                            </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="lname" class="form-label">last Name</label>
-                        <input type="text" class="form-control" id="lname"  placeholder="last Name" formControlName="lname" [ngClass]="{error:getControl('lname')?.errors && getControl('lname')?.touched}">
-                        <div *ngIf="getControl('lname')?.errors && getControl('lname')?.touched">
-                            <small class="text-danger" *ngIf="getControl('lname')?.errors?.['required']">Last name is required</small>
-                            <small class="text-danger" *ngIf="getControl('lname')?.errors?.['maxlength']">Only 32 characters are allowed</small>
-                           
-                            </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="Address" formControlName="address" [ngClass]="{error:getControl('address')?.errors && getControl('address')?.touched}">
-                        <div *ngIf="getControl('address')?.errors && getControl('address')?.touched">
-                            <small class="text-danger" *ngIf="getControl('address')?.errors?.['required']">Address is required</small>
-                            <small class="text-danger" *ngIf="getControl('address')?.errors?.['maxlength']">Only 50 characters are allowed</small>
-                           
-                            </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="contactNo" class="form-label">Contact Number</label>
-                        <input type="text" class="form-control" id="contactNo" placeholder="Contact Number" formControlName="contactNo" [ngClass]="{error:getControl('contactNo')?.errors && getControl('contactNo')?.touched}">
-                        <div *ngIf="getControl('contactNo')?.errors && getControl('contactNo')?.touched">
-                            <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['required']">Contact number is required</small>
-                            <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['maxlength']">Only 10 digits are allowed</small>
-                            <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['pattern']">Only numbers allowed</small>
-                            </div>
-                    </div>
-            
-                  
-            </form>
-            </div>
-            </body>
-            
-	</div>
-	<div class="modal-footer">
-        <input class="btn btn-success" type="submit" name="submit_reg" (click)="editUserData();d('Cross click');" value="Submit" >
-		<button type="button" class="btn btn-danger" (click)="d('Cross click')">Close</button>
-	</div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary"
+      (click)="removeUserData(registerform.value.uid);successuserremove();c('Close click');">Yes</button>
+    <button type="button" class="btn btn-secondary" (click)="c('Close click')">No</button>
+  </div>
 </ng-template>
 
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title"><b>User details</b></h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+
+    <body>
+      <div class="container mt-4">
+        <form [formGroup]="registerform">
+          <div class="mb-3">
+            <input type="text" formControlName="uid" hidden>
+            <label for="ticketNo" class="form-label">Ticket Number</label>
+            <input type="text" class="form-control" id="ticketNo" placeholder="Ticket Number" formControlName="ticketNo"
+              [ngClass]="{error:getControl('ticketNo')?.errors && getControl('ticketNo')?.touched}">
+            <div *ngIf="getControl('ticketNo')?.errors && getControl('ticketNo')?.touched">
+              <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['required']">Ticket number is
+                required</small>
+              <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['maxlength']">Only 10 digits are
+                allowed</small>
+              <small class="text-danger" *ngIf="getControl('ticketNo')?.errors?.['pattern']">Only numbers
+                allowed</small>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="fname" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="fname" placeholder="First Name" formControlName="fname"
+              [ngClass]="{error:getControl('fname')?.errors && getControl('fname')?.touched}">
+            <div *ngIf="getControl('fname')?.errors && getControl('fname')?.touched">
+              <small class="text-danger" *ngIf="getControl('fname')?.errors?.['required']">Ticket number is
+                required</small>
+              <small class="text-danger" *ngIf="getControl('fname')?.errors?.['maxlength']">Only 32 characters are
+                allowed</small>
+
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="lname" class="form-label">last Name</label>
+            <input type="text" class="form-control" id="lname" placeholder="last Name" formControlName="lname"
+              [ngClass]="{error:getControl('lname')?.errors && getControl('lname')?.touched}">
+            <div *ngIf="getControl('lname')?.errors && getControl('lname')?.touched">
+              <small class="text-danger" *ngIf="getControl('lname')?.errors?.['required']">Last name is required</small>
+              <small class="text-danger" *ngIf="getControl('lname')?.errors?.['maxlength']">Only 32 characters are
+                allowed</small>
+
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="address" class="form-label">Address</label>
+            <input type="text" class="form-control" id="address" placeholder="Address" formControlName="address"
+              [ngClass]="{error:getControl('address')?.errors && getControl('address')?.touched}">
+            <div *ngIf="getControl('address')?.errors && getControl('address')?.touched">
+              <small class="text-danger" *ngIf="getControl('address')?.errors?.['required']">Address is required</small>
+              <small class="text-danger" *ngIf="getControl('address')?.errors?.['maxlength']">Only 50 characters are
+                allowed</small>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="contactNo" class="form-label">Contact Number</label>
+            <input type="text" class="form-control" id="contactNo" placeholder="Contact Number"
+              formControlName="contactNo"
+              [ngClass]="{error:getControl('contactNo')?.errors && getControl('contactNo')?.touched}">
+            <div *ngIf="getControl('contactNo')?.errors && getControl('contactNo')?.touched">
+              <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['required']">Contact number is
+                required</small>
+              <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['maxlength']">Only 10 digits are
+                allowed</small>
+              <small class="text-danger" *ngIf="getControl('contactNo')?.errors?.['pattern']">Only numbers
+                allowed</small>
+            </div>
+          </div>
+        </form>
+      </div>
+    </body>
+
+  </div>
+  <div class="modal-footer">
+    <input class="btn btn-success" type="submit" name="submit_reg" (click)="editUserData();d('Cross click');"
+      value="Submit">
+    <button type="button" class="btn btn-danger" (click)="d('Cross click')">Close</button>
+  </div>
+</ng-template>
